[tool.poetry]
name = "olsync"
version = "0.1.0"
description = "A tool to sync Overleaf projects"
authors = ["Hafiz <hafiz.buetipe@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/moritzgloeckl/overleaf-sync"
license = "MIT"
keywords = ["overleaf", "sync", "latex", "tex"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = ">=3.10.2,<3.14"
requests = "==2.*"
beautifulsoup4 = "==4.11.1"
yaspin = "==2.*"
python-dateutil = "~=2.8.1"
click = "==8.*"
socketIO-client = "==0.5.7.2"
pyside6 = "==6.*"

[tool.poetry.scripts]
ols = "olsync.olsync:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"